lauloel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lauloel-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: lauloel
spec:
  rules:
  - host: lauloel.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lauloel-service
            port: 
              number: 80
